--- a/pom.xml
+++ b/pom.xml
@@ -55,10 +55,20 @@
 <reporting>
     <plugins>
         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>            <artifactId>maven-surefire-report-plugin</artifactId>
+            <version>2.9</version>
+        </plugin>
+	<plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-report-plugin</artifactId>
             <version>2.9</version>
         </plugin>
     </plugins>
+           <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.0</version>    
+        </dependency>
  </reporting>
+
 </project>
