--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
 
       	<name>Snapshot</name>
 
-      <url>http://localhost:8081/repository/maven-snapshots/</url>
+      <url>http://192.168.100.18:8081/repository/maven-snapshots/</url>
 
     </snapshotRepository>
 
