--- a/pom.xml
+++ b/pom.xml
@@ -40,4 +40,27 @@
 		</plugins>
 	</build>
 
+	<distributionManagement>
+    	<snapshotRepository>
+      		<id>maven-snapshots</id>
+      		<name>Snapshot</name>
+      		<url>http://localhost:8081/repository/maven-snapshots/</url>
+    	</snapshotRepository>
+	</distributionManagement>
+
+<reporting>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-report-plugin</artifactId>
+            <version>2.9</version>
+        </plugin>
+		<plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-report-plugin</artifactId>
+            <version>2.9</version>
+        </plugin>
+    </plugins>
+</reporting>
+
 </project>
