modif pom.xml pour nexus release

--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
 	</distributionManagement>
 
 <scm>
-   <connection>scm:git:https://github.com:GregLebreton/projet-MAVEN.git</connection>
+   <connection>scm:git:http://github.com:GregLebreton/projet-MAVEN.git</connection>
    <url>http://github.com/GregLebreton:projet-MAVEN.git</url>
    <developerConnection>scm:git:https://github.com:GregLebreton/projet-MAVEN.git</developerConnection>
 </scm>
