modif pom.xml pour nexus release

--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
 <scm>
    <connection>scm:git:http://github.com:GregLebreton/projet-MAVEN.git</connection>
    <url>http://github.com/GregLebreton:projet-MAVEN.git</url>
-   <developerConnection>scm:git:https://github.com:GregLebreton/projet-MAVEN.git</developerConnection>
+   <!--developerConnection>scm:git:https://github.com:GregLebreton/projet-MAVEN.git</developerConnection-->
 </scm>
 
 <reporting>
