modif pom.xml pour nexus release erreur .git

--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,6 @@
    				<artifactId>maven-release-plugin</artifactId>
    				<version>2.4.2</version>
    					<configuration>
-      			<tagNameFormat>v@{project.version}</tagNameFormat>
       			<autoVersionSubmodules>true</autoVersionSubmodules>
       			<releaseProfiles>releases</releaseProfiles>
    					</configuration>
@@ -64,9 +63,9 @@
 	</distributionManagement>
 
 <scm>
-   <connection>scm:git:https://github.com/GregLebreton/projet-MAVEN.git</connection>
-   <url>http://github.com/GregLebreton/projet-MAVEN</url>
-   <!--developerConnection>scm:git:https://github.com:GregLebreton/projet-MAVEN.git</developerConnection-->
+   <connection>scm:git:git@github.com:GregLebreton/projet-MAVEN.git</connection>
+   <url>scm:git:git@github.com:GregLebreton/projet-MAVEN.git</url>
+   <developerConnection>scm:git:git@github.com:GregLebreton/projet-MAVEN.git</developerConnection>
 </scm>
 
 <reporting>
