--- a/pom.xml
+++ b/pom.xml
@@ -65,8 +65,9 @@
 <reporting>
     <plugins>
         <plugin>
-            <groupId>org.apache.maven.plugins</groupId>            <artifactId>maven-surefire-report-plugin</artifactId>
-            <version>2.9</version>
+            <groupId>org.apache.maven.plugins</groupId> 
+              <artifactId>maven-surefire-report-plugin</artifactId>
+              <version>2.9</version>
         </plugin>
 	<plugin>
             <groupId>org.apache.maven.plugins</groupId>
